--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "jotai": "^2.10.1",
     "next": "15.0.1",
     "react": "18.3.1",
+    "react-date-object": "^2.1.9",
     "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
+    "react-multi-date-picker": "^4.5.2",
     "recharts": "^2.13.0",
     "tailwind-merge": "^2.5.4"
   },
